--- a/ImageScaling/composer.json
+++ b/ImageScaling/composer.json
@@ -5,6 +5,9 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "components/jquery": "^3.3",
+        "gumlet/php-image-resize": "^1.9",
+        "monolog/monolog": "^1.24",
         "sensio/framework-extra-bundle": "^5.4",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
@@ -53,7 +56,9 @@
         "post-update-cmd": [
             "@auto-scripts",
             "rm -rf public/bootstrap",
-            "cp -R vendor/twbs/bootstrap/dist public/bootstrap"
+            "cp -R vendor/twbs/bootstrap/dist public/bootstrap",
+            "rm -rf public/js",
+            "cp -R vendor/components/jquery public/js"
         ]
     },
     "conflict": {
